log
Sat Apr  9 03:54:11 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|5
total_score: 20/70
24ca96f
Sat Apr  9 03:57:41 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|5
total_score: 20/70
e889f84
Sat Apr  9 22:49:53 UTC 2022: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:70:10: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
   return mapa;
          ^~~~
cc1: all warnings being treated as errors
Compilation failed
b746bfe
Sat Apr  9 22:54:06 UTC 2022: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  5|5
total_score: 20/70
9a47633
Sat Apr  9 22:57:07 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|5
total_score: 20/70
314049f
Sat Apr  9 22:58:50 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|5
total_score: 20/70
4dabf16
Sat Apr  9 23:04:21 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘searchMap’:
hashmap.c:82:10: error: unused variable ‘capacidad’ [-Werror=unused-variable]
     long capacidad = hash(key, map->capacity);
          ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7983f11
Sat Apr  9 23:04:38 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 30/70
4e2d2fe
Sat Apr  9 23:10:35 UTC 2022: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  8|4
total_score: 30/70
967f44d
